kubernetes-manifest/application-manifest/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: app-deployment
  name: app-deployment
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-deployment
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app-deployment
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - app-deployment
              topologyKey: "kubernetes.io/hostname"  
      securityContext:
        runAsUser: 33  
        runAsNonRoot: true  
      serviceAccountName: app-sa
      automountServiceAccountToken: false
      containers:
      - image: necipulusoyy9120/spring-petclinic-app
        name: spring-petclinic-app
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health  
            port: 8080
          initialDelaySeconds: 180  
          periodSeconds: 30  
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30 
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 10
        resources:
          limits:
              memory: 750Mi
              cpu: 750m
          requests:
            memory: 500Mi
            cpu: 500m
