kubernetes-manifest/application-manifest/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: app
  name: app-svc
  namespace: prod
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 30001
  selector:
    app: app
status:
  loadBalancer: {}
